Changing paths to config files for polybar and changing one keyboard shortcut

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -18,7 +18,7 @@
 
 # Include color palette file
 
-include-file = /home/raptor257/.dotfiles/polybar/.config/polybar/color-gruvbox.ini
+include-file = /home/raptor257/.config/polybar/color-gruvbox.ini
 
 [bar/gruvbox_bar]
 bottom = false
@@ -45,7 +45,7 @@ separator-foreground = ${gruvbox-material.grey2}
 
 # Include fonts config file
 
-include-file = /home/raptor257/.dotfiles/polybar/.config/polybar/fonts.ini
+include-file = /home/raptor257/.config/polybar/fonts.ini
 
 # Config modules positions
 
@@ -65,7 +65,7 @@ override-redirect = false
 
 # Importing modules from seperate file
 
-include-file = /home/raptor257/.dotfiles/polybar/.config/polybar/modules.ini
+include-file = /home/raptor257/.config/polybar/modules.ini
 
 
 [settings]
