--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -52,6 +52,7 @@ format-prefix-foreground = ${gruvbox-material.orange}
 label-layout = %icon%
 layout-icon-0 = hr;HR
 layout-icon-1 = us;US
+layout-icon-2 = de;DE
 label-layout-foreground = ${gruvbox-material.cream}
 label-layout-padding = 1
 
